fix: 修复 r-table 中显示 r-datepicker 问题，主要是处理 r-table>td>div 的 overflow 问题

--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -16,6 +16,7 @@
 
   th{
     background-color: $color-white-light;
+    position: relative;
 
     .r-table-sort{
       position: relative;
@@ -54,8 +55,6 @@
     >div{
       padding-left: 10px;
       padding-right: 10px;
-      overflow: hidden;
-      text-overflow: ellipsis;
     }
   }
 
